Fix overflow scrolling and bg color

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,6 +34,7 @@
 
   body {
     overflow-x: hidden;
+    background-color: var(--bg);
   }
 }
 
